--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
+@import 'react-toastify/dist/ReactToastify.css';
 
 @import "slick-carousel/slick/slick.css";
 @import "slick-carousel/slick/slick-theme.css";
